# Aethel

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CUSTOM_WIDGETS.md  DEBUGGING.md  GETTING_STARTED.md  LAYOUT.md  PERFORMANCE.md  PUBLIC_API.md  THEMING.md  WIDGETS.md
examples/: basic_widgets.rs  bench.rs  demo.rs
examples/demo/: app.rs  render.rs  sim.rs  ui.rs
src/: app.rs  color.rs  commands.rs  experimental.rs  layout.rs  lib.rs  prelude.rs  style.rs  ui.rs
src/core/: frame_stats.rs  input.rs  mod.rs  renderer.rs  reuse.rs  scheduler.rs  scratch.rs  simd.rs
src/gpu_core/: buffers.rs  mod.rs  pipeline.rs  plan.rs  stats.rs
src/gui/: binding.rs  clip.rs  command.rs  containers.rs  geometry.rs  interaction.rs  layout.rs  layout_enums.rs  mod.rs  paint.rs  shader.rs  style.rs  text.rs  text_cache.rs  widget.rs  widget_builder.rs
src/primitives/: builder.rs  line.rs  mod.rs  point.rs  primitives.rs  rect.rs  triangle.rs
src/shaders/: gui.wgsl
src/widgets/: button.rs  checkbox.rs  color_picker.rs  combo_box.rs  label.rs  mod.rs  panel.rs  progress_bar.rs  separator.rs  slider.rs  slider_labeled.rs  text_input.rs
tests/: demo.rs
