[package]
name = "aethel_gui"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["vireonx"]

[dependencies]
wgpu = "0.19"
winit = { version = "0.29", features = ["rwh_05"] }
rayon = "1.8"
bytemuck = { version = "1.14", features = ["derive"] }
glyphon = "0.5"
futures = "0.3"
raw-window-handle = "0.5"
log = "0.4"
glam = "0.24"
pollster = "0.3"

[dev-dependencies]
naga = { version = "0.19.2", features = ["wgsl-in"] }
