[package]
name = "aethel_gui"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
authors = ["vireonx"]
description = "A retained-first GPU GUI runtime for Rust built on wgpu."
readme = "README.md"
keywords = ["gui", "wgpu", "ui", "graphics", "rust"]
categories = ["gui", "graphics"]

[features]
default = []
debug_overlay = []
experimental = []

[dependencies]
wgpu = "29.0.3"
winit = "0.30.13"
rayon = "1.12.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
glyphon = "0.11.0"
glam = "0.32.1"
pollster = "0.4.0"

[dev-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }
